# c_primer_6

./: .gitignore  CMakeLists.txt  README.md
src/ch1/: ex1.c  hello.c
src/ch2/: 2_1_first.c  2_3_two_func.c
src/ch3/: 3_10_escape.c  3_1_rhodium.c  3_3_bases.c  3_4_print2.c  3_4_print_float.c  3_5_charcode.c  3_7_floaterr.c  3_7_showr_pt.c  3_8_typesize.c  3_9_badcount.c
src/ch4/: 4_1_talkback.c  4_2_praise1.c  4_4_pizza.c  4_5_defines.c  4_8_floats.c
